adding mediaqueries for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -10,37 +10,40 @@
     <script src="https://kit.fontawesome.com/47d0b5dd24.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="sidebar"></div>
     <header>
         <a href="#" id="btn-menu"><i class="fas fa-bars"></i></a>
     </header>
     <main class="main-container">
-       <div class="calculator">
-           <div class="screen">
-              <p id="result"></p>
-           </div>
-           <button id="btn-ac" class="btn btn-ac">AC</button>
-           <button name="data-operation" class="btn btn-prc">%</button>
-           <button name="data-operation" class="btn btn-div">/</button>
-           <button name="data-number" class="btn btn-7">7</button>
-           <button name="data-number" class="btn btn-8">8</button>
-           <button name="data-number" class="btn btn-9">9</button>
-           <button name="data-operation" class="btn btn-x">X</button>
-           <button name="data-number" class="btn btn-4">4</button>
-           <button name="data-number" class="btn btn-5">5</button>
-           <button name="data-number" class="btn btn-6">6</button>
-           <button name="data-operation" class="btn btn-rest">-</button>
-           <button name="data-number" class="btn btn-1">1</button>
-           <button name="data-number" class="btn btn-2">2</button>
-           <button name="data-number" class="btn btn-3">3</button>
-           <button name="data-operation" class="btn btn-sum">+</button>
-           <button name="data-number" class="btn btn- btn-0">0</button>
-           <button name="data-number" class="btn  btn-dot">.</button>
-           <button id="btn-equal" class="btn  btn-equal">=</button>
-           
-       </div>
+       <div class="calculator-container">
+        <div class="calculator">
+            <div class="screen">
+               <p id="result"></p>
+            </div>
+            <button id="btn-ac" class="btn btn-ac">AC</button>
+            <button name="data-operation" class="btn btn-prc">%</button>
+            <button name="data-operation" class="btn btn-div">/</button>
+            <button name="data-number" class="btn btn-7">7</button>
+            <button name="data-number" class="btn btn-8">8</button>
+            <button name="data-number" class="btn btn-9">9</button>
+            <button name="data-operation" class="btn btn-x">X</button>
+            <button name="data-number" class="btn btn-4">4</button>
+            <button name="data-number" class="btn btn-5">5</button>
+            <button name="data-number" class="btn btn-6">6</button>
+            <button name="data-operation" class="btn btn-rest">-</button>
+            <button name="data-number" class="btn btn-1">1</button>
+            <button name="data-number" class="btn btn-2">2</button>
+            <button name="data-number" class="btn btn-3">3</button>
+            <button name="data-operation" class="btn btn-sum">+</button>
+            <button name="data-number" class="btn btn- btn-0">0</button>
+            <button name="data-number" class="btn  btn-dot">.</button>
+            <button id="btn-equal" class="btn  btn-equal">=</button>
+            
         </div>
+         </div>
+       </div>
     </main>
-    <div class="sidebar"></div>
+
     <footer></footer>
     <script src="./src/menu.js"></script>
     <script src="./src/index.js"></script>
