Adding history of operations in the sidebar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <script src="https://kit.fontawesome.com/47d0b5dd24.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+        <div class="change-color-container"></div>
+        <div class="operations-container">
+        </div>
+    </div>
     <header>
         <a href="#" id="btn-menu"><i class="fas fa-bars"></i></a>
     </header>
