added hr and styles in the sidebar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="change-color-container"></div>
+        <div class="change-color-container">
+            
+        </div>
+        <hr/>
         <div class="operations-container">
         </div>
     </div>
