Adding btn to clear history

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <body>
     <div class="sidebar">
         <div class="change-color-container">
-            
+
         </div>
         <hr/>
         <div class="operations-container">
+            <div class="clear-operations">
+                <i id="clear-history" class="fas fa-trash"></i>
+            </div>
+            <div class="operations"></div>
         </div>
     </div>
     <header>
